--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                 pattern="[a-zA-Zа-яА-ЯіІїЇʼєЄ]+"
                 required
               />
-              <svg class="review-form-input-icon" width="18" height="18">
+              <svg class="review-form-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -515,7 +515,7 @@
                 title="xxx-xxx-xx-xx"
                 required
               />
-              <svg class="review-form-input-icon" width="18" height="18">
+              <svg class="review-form-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -530,7 +530,7 @@
                 name="user-email"
                 required
               />
-              <svg class="review-form-input-icon" width="18" height="18">
+              <svg class="review-form-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
@@ -548,13 +548,13 @@
           <div class="review-form-checkbox">
             <input
               class="review-form-policy-checkbox visually-hidden"
-              id="privacy-policy"
+              id="user-privacy"
               type="checkbox"
-              name="privacy-policy"
+              name="user-privacy"
               value="true"
               required
             />
-            <label class="review-form-policy-label" for="privacy-policy">
+            <label class="review-form-policy-label" for="user-privacy">
               <span class="review-form-custom-checkbox"
                 ><svg class="review-form-checkmark-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector"></use>
