--- a/index.html
+++ b/index.html
@@ -475,10 +475,32 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="footer-subscribe-title">Subscribe</p>
+          <form class="footer-subscribe-form">
+            <label class="footer-subscribe-label" for="user-subscribe">
+              <input
+                class="footer-subscribe-input"
+                type="email"
+                id="user-subscribe"
+                name="user-subscribe"
+                placeholder="E-mail"
+                pattern="[a-zA-Zа-яА-ЯіІїЇʼєЄ]+"
+                required
+              />
+            </label>
+            <button class="footer-form-subscribe-btn" type="text">
+              Subscribe
+              <svg class="footer-subscribe-btn-img" width="24" height="20">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-btn-close" type="button">
           <svg class="modal-btn-close-img" width="8" height="8">
