--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
       </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-btn-close" type="button">
           <svg class="modal-btn-close-img" width="8" height="8">
