--- a/index.html
+++ b/index.html
@@ -489,9 +489,9 @@
                 required
               />
             </label>
-            <button class="footer-form-subscribe-btn" type="text">
+            <button class="footer-form-subscribe-btn" type="submit">
               Subscribe
-              <svg class="footer-subscribe-btn-img" width="24" height="20">
+              <svg class="footer-subscribe-btn-img" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
